--- a/index.html
+++ b/index.html
@@ -146,7 +146,17 @@
   margin: 10px 0 -15px 0;
   font-style: italic;
 }
-
+.conseil-citation {
+  border-left: 5px solid #4CAF50;
+  background-color: #f9fff9;
+  padding: 15px 20px;
+  margin: 30px 0;
+  font-style: italic;
+  font-size: 1.2rem;
+  color: #2e7d32;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  border-radius: 8px;
+}
     /* Styles optimisés pour les publicités */
     .ad-container {
       text-align: center;
@@ -410,9 +420,15 @@
           <li>Petit déjeuner en pleine conscience</li>
           <li>Planification rapide de tes priorités</li>
       </ul>
-      <p>En résistant à l'appel du téléphone dès le matin, tu te donnes l'occasion de démarrer ta journée avec plus de clarté et de sérénité.</p>
+      <div class="conseil-citation">
+  « Commence ta journée sans écran, et tu verras : la clarté remplace le chaos, la sérénité prend la place du stress. »
+</div>
     </div>
   </div>
+<script async="async" data-cfasync="false" src="//pl26394533.profitableratecpm.com/94687c69c646d6df682179c1ae82da37/invoke.js"></script>
+<div class="ad-label">🔹 Contenu sponsorisé</div>
 
+  <div id="container-94687c69c646d6df682179c1ae82da37"></div>
+  <script type='text/javascript' src='//pl26402112.profitableratecpm.com/b3/2a/5b/b32a5bd830ace64ee0d7b3ebec706b8e.js'></script>
 </body>
 </html>
