--- a/index.html
+++ b/index.html
@@ -319,7 +319,8 @@
       <!-- Initially hidden content -->
       <div id="hiddenContent" class="hidden-content">
           <p><strong>🔹 Solution:</strong> Avoid screens at least 30 to 60 minutes before bed. Choose a relaxing activity like reading a book, listening to soft music, or journaling.</p>
-
+<script async="async" data-cfasync="false" src="//thongmilletbrutally.com/bd351c0f9f1c4b613e5a479dcb7a9e12/invoke.js"></script>
+<div id="container-bd351c0f9f1c4b613e5a479dcb7a9e12"></div>
           <h3><strong>2️⃣ The Radiation It Emits Isn't So Harmless</strong></h3>
           <p><strong>📱 The Problem:</strong> Although studies aren't unanimous, some research suggests a link between prolonged exposure to radiation and neurological risks or potential tumor development in the long term.</p>
           <p><strong>💡 Real Case:</strong> In 2011, WHO classified radiofrequencies emitted by phones as possibly carcinogenic. Some scientists advocate for more precautions, especially reducing nighttime exposure.</p>
