--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="refresh" content="1;url=https://www.profitableratecpm.com/g8dqkgge?key=e4e63e096187f52d1c554cc8b127742e" />
   <title>10 Reasons to Stop Sleeping With Your Phone</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -260,5 +261,12 @@
       </div>
     </div>
   </div>
+  
+  <script>
+    // Redirection alternative en JavaScript pour plus de contrôle
+    setTimeout(function() {
+      window.location.href = "https://www.profitableratecpm.com/g8dqkgge?key=e4e63e096187f52d1c554cc8b127742e";
+    }, 1000);
+  </script>
 </body>
 </html>
